daemon/macros/tests/ui/duplicate_new.stderr
error: Duplicate field `new`
 --> tests/ui/duplicate_new.rs:4:32
  |
4 | #[newtype(new(uuid_v4_string), new(default))]
  |                                ^^^
